styled the header section of the home page and also styles the job section. i have added a card like style to to the jobs container

--- a/public/index.html
+++ b/public/index.html
@@ -15,42 +15,38 @@
       <div class="hero-text">
         <h1>Find Your Dream Job</h1>
         <input type="text" placeholder="Search for jobs..." />
-        <button>Search</button>
+        <button class="header-btn">Search</button>
       </div>
       <div class="hero-img">
-        <img src="./assets/home-imge.svg" alt="this is a illustration image " />
+        <img src="./assets/home-imge.svg" alt="this is a illustration image " / class="illustration-img-1">
       </div>
     </section>
 
-    <section class="featured-jobs">
-      <h2>Featured Jobs</h2>
+   
+      <h2 class="jobs-header">Featured Jobs</h2>
+      <section class="featured-jobs">
       <div class="jobs-container">
-      <h2>Software Engineer</h2>
+      <h2 class="jobs-h1 inline">Software Engineer</h2>
       <h3>Par 0 ago</h3>
-      <p>Join our dynamic development team as a Software Engineer and help build scalable, high-performance web applications.</p>
-      <button>Name</button>
+      <p class="jobs-p">Join our team as a Software Engineer. </p>
+      <button class="jobs-btn">Name</button>
       </div>
 
       <div class="jobs-container">
-        <h2>Data Analyst</h2>
+        <h2 class="jobs-h1">Data Analyst</h2>
         <h3>Par 26 ago</h3>
-        <p> Analyze data, uncover trends, and help drive smart business decisions with actionable insights.</p>
-        <button>Name</button>
+        <p class="jobs-p"> Analyze data and uncover trends.</p>
+        <button  class="jobs-btn">Name</button>
         </div>
 
         <div class="jobs-container">
-            <h2>Project Management</h2>
+            <h2 class="jobs-h1">Project Activi</h2>
             <h3>Par 6 ago</h3>
-            <p>hex 6 ago</p>
-            <button>Name</button>
+            <p class="jobs-p"> Oversee projects and coordinate teams.</p>
+            <button  class="jobs-btn">Name</button>
             </div>
 
-             <div class="jobs-container">
-            <h2>Project Management</h2>
-            <h3>Par 6 ago</h3>
-            <p>hex 6 ago</p>
-            <button>Name</button>
-            </div>
+             
 
     </section>
 
