increase the padding of the jobs-container and the company container

--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,16 @@
 
     </section>
 
-    <section class="top-companies">
-      <h2>Top Companies</h2>
-      <div class="companies-container">
-        <img src="./assets/b-solid.svg" alt="this is a solid b image">
-        <h3>Business</h3>
+   
+      <h2 class="company-header">Top Companies</h2>
+      <section class="top-companies">
+      <div class="companies-container attach">
+        <img src="./assets/b-solid.svg" alt="this is a solid b image" class="company-image">
+        <h3>BusinessC</h3>
       </div>
 
-      <div class="companies-container">
-        <img src="./assets/b-solid.svg" alt="this is a solid b image">
+      <div class="companies-container attach">
+        <img src="./assets/b-solid.svg" alt="this is a solid b image" class="company-image">
         <h3>TechCorp</h3>
       </div>
 
