--- a/public/job-listing.html
+++ b/public/job-listing.html
@@ -44,21 +44,21 @@
     <section class="Job-listing-container">
       <h2 class="listings-header-2">Job Listings</h2>
         <div class="job-card">
-            <h3>Software Engineer</h3>
-            <p>Software Co — Brusubi, NY</p>
-            <span>2 days ago</span>
+            <h3>Software Co — Brusubi, NY</h3>
+            <p>Join our dynamic development team as a Software Engineer and help build scalable, high-performance web applications. Ideal for problem-solvers passionate about writing clean, efficient code and delivering impactful software solutions.</p>
+            <span class="h3-span">2 days ago</span>
         </div>
 
         <div class="job-card">
             <h3>Data Analyst</h3>
-            <p>Insight Ltd — Banjul, IL</p>
-            <span> 3 days ago</span>
+            <p> We’re looking for a detail-oriented Data Analyst to turn raw data into meaningful insights. If you enjoy working with large datasets and translating trends into actionable business strategies, this role is for you.</p>
+            <span class="h3-span"> 3 days ago</span>
         </div>
 
          <div class="job-card">
             <h3>Product Designer</h3>
-            <p>DesignPro - Remote</p>
-            <span> 3 days ago</span>
+            <p>Craft intuitive and engaging user experiences through thoughtful design and collaboration.</p>
+            <span class="h3-span"> 3 days ago</span>
         </div>
     
     </section>
