--- a/public/login.html
+++ b/public/login.html
@@ -2,34 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | JobConnect</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - JobConnect</title>
+  <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <div class="navbar-container"></div>
 
-  <main class="login-wrapper">
-    <h2 class="login-title">Login to JobConnect</h2>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <div class="navbar-logo">JobConnect</div>
+      <ul class="navbar-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Dashboard</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+      <div class="navbar-toggle" id="mobile-menu">&#9776;</div>
+    </div>
+  </nav>
+
+
+  <div class="login-container">
+    <h1 class="login-title">Login to JobConnect</h1>
     <form class="login-form">
-      <label class="form-label" for="email">Email</label>
-      <input class="form-input" type="email" name="email" required />
+      <label for="email" class="form-label">Email</label>
+      <input type="email" id="email" class="form-input" required />
 
-      <label class="form-label" for="password">Password</label>
-      <input class="form-input" type="password" name="password" required />
+      <label for="password" class="form-label">Password</label>
+      <input type="password" id="password" class="form-input" required />
 
-      <button class="form-button" type="submit">Login</button>
+      <div class="form-links">
+        <a href="#" class="form-link">Forgot Password?</a>
+      </div>
 
-      <p class="form-link">
-        Don't have an account?
-        <a class="form-link-anchor" href="#">Register</a>
-      </p>
+      <button type="submit" class="login-button">Login</button>
     </form>
-  </main>
 
-  <div class="footer-container"></div>
+    <div class="signup-link">
+      <p>Don't have an account? <a href="#">Sign up</a></p>
+    </div>
+  </div>
 
-  <script src="js/main.js"></script>
-  <script src="js/login.js"></script>
+
+  <footer class="footer">
+  <div class="footer-container">
+    <p class="footer-text">© 2025 JobConnect. All rights reserved.</p>
+    <ul class="footer-links">
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms of Service</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
