--- a/public/job-listing.html
+++ b/public/job-listing.html
@@ -46,19 +46,19 @@
         <div class="job-card">
             <h3>Software Co — Brusubi, NY</h3>
             <p>Join our dynamic development team as a Software Engineer and help build scalable, high-performance web applications. Ideal for problem-solvers passionate about writing clean, efficient code and delivering impactful software solutions.</p>
-            <span class="h3-span">2 days ago</span>
+            <span class="h3-span"> posted 2 days ago</span>
         </div>
 
         <div class="job-card">
             <h3>Data Analyst</h3>
             <p> We’re looking for a detail-oriented Data Analyst to turn raw data into meaningful insights. If you enjoy working with large datasets and translating trends into actionable business strategies, this role is for you.</p>
-            <span class="h3-span"> 3 days ago</span>
+            <span class="h3-span"> posted 3 days ago</span>
         </div>
 
          <div class="job-card">
             <h3>Product Designer</h3>
             <p>Craft intuitive and engaging user experiences through thoughtful design and collaboration.</p>
-            <span class="h3-span"> 3 days ago</span>
+            <span class="h3-span"> posted 3 days ago</span>
         </div>
     
     </section>
