--- a/public/job-details-software-Engineer.html
+++ b/public/job-details-software-Engineer.html
@@ -11,9 +11,9 @@
   <main >
     <section class="job-details-section">
       <div class="job-header">
-        <h2>Software Engineer</h2>
-      <p><strong>Company:</strong> TecCorp</p>
-    <p><strong>Location:</strong> New York, NY</p>
+        <h2 class="jobs-header">Software Engineer</h2>
+      <p class="Company-name"><strong>Company:</strong> TecCorp</p>
+    <p class="Company-location"><strong>Location:</strong> New York, NY</p>
     <div class="tags">
       <span class="tag">Full-Time</span>
       <span class="tag">Remote</span>
@@ -51,36 +51,3 @@
 </html>
 
 
-<section class="job-details">
-  <div class="job-header">
-    <h2>Software Engineer</h2>
-    <p><strong>Company:</strong> TecCorp</p>
-    <p><strong>Location:</strong> New York, NY</p>
-    <div class="tags">
-      <span class="tag">Full-Time</span>
-      <span class="tag">Remote</span>
-      <span class="tag">Experienced</span>
-    </div>
-    <button class="apply-btn">Apply Now</button>
-  </div>
-
-  <div class="job-description">
-    <h3>Job Description</h3>
-    <p>We are seeking a passionate Software Engineer to join our growing development team. You’ll be responsible for building scalable web applications, writing clean code, and collaborating with cross-functional teams.</p>
-
-    <h3>Requirements</h3>
-    <ul>
-      <li>Bachelor’s degree in Computer Science or related field</li>
-      <li>3+ years of experience in web development</li>
-      <li>Proficient in JavaScript, HTML, CSS</li>
-      <li>Familiar with backend technologies like Node.js</li>
-    </ul>
-
-    <h3>Perks & Benefits</h3>
-    <ul>
-      <li>Remote-friendly policy</li>
-      <li>Flexible work hours</li>
-      <li>Health & wellness stipend</li>
-    </ul>
-  </div>
-</section>
