styled the Data Analysis page similar to the software enginear page and also add a link of the analtsis page to the listing page

--- a/public/job-listing.html
+++ b/public/job-listing.html
@@ -55,6 +55,7 @@
             <h3>Data Analyst</h3>
             <p> We’re looking for a detail-oriented Data Analyst to turn raw data into meaningful insights. If you enjoy working with large datasets and translating trends into actionable business strategies, this role is for you.</p>
             <span class="h3-span"> posted 3 days ago</span>
+            <div><a href="job-details-Data-Analyst.html" class="link"> Details >></a></div>
             
         </div>
 
