styled the product desinger page

--- a/public/job details-Product-Designer.html
+++ b/public/job details-Product-Designer.html
@@ -4,24 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Manager - Job Details</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
-  <main class="job-details-container">
-    <section class="job-header">
-      <h1>Project Manager</h1>
-      <p>At <strong>BuildRight Inc.</strong></p>
-      <span class="location">New York, NY</span>
-      <a href="#" class="apply-btn">Apply Now</a>
-    </section>
+  <main>
+    <section class="job-details-section">
+    <div class="job-header">
+      <h1 class="jobs-header">Project Manager</h1>
+      <p class="Company-name"><strong>Company:</strong>BuildRight Inc.</p>
+      <p class="Company-location"><strong>Location:</strong>Banjul</p>
+     
+    
 
-    <section class="job-tags">
+    <div class="job-tags">
       <button class="tag">Management</button>
       <button class="tag">Full-time</button>
       <button class="tag">Hybrid</button>
-    </section>
+    </div>
+    <div>
+        <button class="apply-btn">Apply Now</button>
+    </div>
+    </div>
 
-    <section class="job-description">
+    <div class="job-description">
       <h2>Job Description</h2>
       <p>
         As a Project Manager, you’ll oversee project planning, timelines, and delivery while ensuring communication and alignment across departments. You’ll be the key point of accountability.
@@ -41,6 +47,7 @@
         <li>Performance bonuses</li>
         <li>Remote work flexibility</li>
       </ul>
+    </div>
     </section>
   </main>
 </body>
