--- a/public/job-details-Data-Analyst.html
+++ b/public/job-details-Data-Analyst.html
@@ -14,7 +14,7 @@
     <div class="job-header">
       <h1 class="jobs-header">Data Analyst</h1>
       <p class="Company-name"><strong>Company:</strong>InsightX</p>
-      <p class="Company-location"><strong>Location:</strong>Remote - NY</p>
+      <p class="Company-location"><strong>Location:</strong>Remote</p>
      
    
 
