--- a/public/job-details-software-Engineer.html
+++ b/public/job-details-software-Engineer.html
@@ -13,7 +13,7 @@
       <div class="job-header">
         <h2 class="jobs-header">Software Engineer</h2>
       <p class="Company-name"><strong>Company:</strong> TecCorp</p>
-    <p class="Company-location"><strong>Location:</strong> New York, NY</p>
+    <p class="Company-location"><strong>Location:</strong> Brikama</p>
     <div class="tags">
       <span class="tag">Full-Time</span>
       <span class="tag">Remote</span>
