--- a/public/job-listing.html
+++ b/public/job-listing.html
@@ -63,6 +63,7 @@
             <h3>Product Designer</h3>
             <p>Craft intuitive and engaging user experiences through thoughtful design and collaboration.</p>
             <span class="h3-span"> posted 3 days ago</span>
+            <div><a href="job details-Product-Designer.html" class="link">Details >></a></div>
         </div>
     
     </section>
