--- a/public/login.html
+++ b/public/login.html
@@ -5,25 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - JobConnect</title>
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/global.css" />
+  <link rel="stylesheet" href="css/login.css" />
 </head>
 <body>
 
   <nav class="navbar">
     <div class="navbar-container">
-      <div class="navbar-logo">JobConnect</div>
+      <div class="navbar-logo"> <a href="index.html"> JobConnect </a></div>
       <ul class="navbar-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="apply.html">Jobs</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="login.html" class="active-link">Login</a></li>
       </ul>
-      <div class="navbar-toggle" id="mobile-menu">&#9776;</div>
     </div>
   </nav>
 
-
-  <div class="login-container">
+  <main class="login-container">
     <h1 class="login-title">Login to JobConnect</h1>
     <form class="login-form">
       <label for="email" class="form-label">Email</label>
@@ -36,24 +35,24 @@
         <a href="#" class="form-link">Forgot Password?</a>
       </div>
 
-      <button type="submit" class="login-button">Login</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
 
     <div class="signup-link">
       <p>Don't have an account? <a href="#">Sign up</a></p>
     </div>
-  </div>
-
+  </main>
 
   <footer class="footer">
-  <div class="footer-container">
-    <p class="footer-text">© 2025 JobConnect. All rights reserved.</p>
-    <ul class="footer-links">
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Terms of Service</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-</footer>
+    <div class="footer-container">
+      <p class="footer-text">© 2025 JobConnect. All rights reserved.</p>
+      <ul class="footer-links">
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 </html>
