added a link to the feature elements in my home page to their respective details section's page

--- a/public/index.html
+++ b/public/index.html
@@ -27,23 +27,23 @@
       <section class="featured-jobs">
       <div class="jobs-container">
       <h2 class="jobs-h1 inline">Software Engineer</h2>
-      <h3>Par 0 ago</h3>
+      <h3>Posted 2 days ago</h3>
       <p class="jobs-p">Join our team as a Software Engineer. </p>
-      <button class="jobs-btn">Name</button>
+      <a href="job-details-software-Engineer.html" class="jobs-link">details</a>
       </div>
 
       <div class="jobs-container">
         <h2 class="jobs-h1">Data Analyst</h2>
-        <h3>Par 26 ago</h3>
+        <h3>Posted 6 days ago</h3>
         <p class="jobs-p"> Analyze data and uncover trends.</p>
-        <button  class="jobs-btn">Name</button>
+        <a href="job-details-Data-Analyst.html" class="jobs-link">details</a>
         </div>
 
         <div class="jobs-container">
-            <h2 class="jobs-h1">Project Activi</h2>
-            <h3>Par 6 ago</h3>
+            <h2 class="jobs-h1">Product Designer</h2>
+            <h3>Posted 4 days ago</h3>
             <p class="jobs-p"> Oversee projects and coordinate teams.</p>
-            <button  class="jobs-btn">Name</button>
+            <a href="job details-Product-Designer.html" class="jobs-link">Details</a>
             </div>
 
              
