linked my search button in the home page to access the dayta stored in my database.

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <section class="hero">
       <div class="hero-text">
         <h1>Find Your Dream Job</h1>
-        <input type="text" placeholder="Search for jobs..." />
+        <input type="text" placeholder="Search for jobs..."/>
         <button class="header-btn">Search</button>
       </div>
       <div class="hero-img">
@@ -71,6 +71,28 @@
 
   
 
-  <script src="./js/home.js"></script>
+  <script>document.querySelector('.header-btn').addEventListener('click', async () => {
+    const query = document.querySelector('input[type="text"]').value;
+    const response = await fetch(`http://localhost:5000/api/jobs`);
+    const jobs = await response.json();
+
+    const featuredSection = document.querySelector('.featured-jobs');
+    featuredSection.innerHTML = ''; // Clear existing jobs
+
+    jobs
+      .filter(job => job.title.toLowerCase().includes(query.toLowerCase()))
+      .forEach(job => {
+        const jobElement = document.createElement('div');
+        jobElement.classList.add('jobs-container');
+        jobElement.innerHTML = `
+          <h2 class="jobs-h1">${job.title}</h2>
+          <h3>Posted on ${new Date(job.datePosted).toDateString()}</h3>
+          <p class="jobs-p">${job.descripttion}</p>
+          <p><strong>${job.company}</strong> | ${job.location}</p>
+          <p>Salary: ${job.salary}</p>
+        `;
+        featuredSection.appendChild(jobElement);
+      });
+  });</script>
 </body>
 </html>
