--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | Job Portal</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./Css/global.css">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
+  <section>
+  <div class="header-section">
+    <header>
+      <div class="navbar-logo">
+        <a href="dashboard.html"> JobConnect </a>
+      </div>
+
+      <button class="menu" id="menu-toggle">&#9776;</button>
+
+    </header>
+  </div>
+ 
+
+  <div class="nav-section">
+  
+  <nav>
+    
+    <div class="nav"> 
+      <ul class="navbar-links">
+        <li class=><a href="job-listing.html" class="nav-a">Job Listing</a></li>
+        <li class=><a href="apply.html" class="nav-a">Apply</a></li>
+        <li class=><a href="dashboard.html" class="nav-a">Dashboard</a></li>
+        <li class=><a href="login.html" class="nav-a">Login</a></li>
+      </ul>
+    </div>
+  </nav>
+  </div>
+  
+
   
 
   <main>
