--- a/public/login.html
+++ b/public/login.html
@@ -10,17 +10,33 @@
 </head>
 <body>
 
-  <nav class="navbar">
-    <div class="navbar-container">
-      <div class="navbar-logo"> <a href="index.html"> JobConnect </a></div>
+  <section>
+  <div class="header-section">
+    <header>
+      <div class="navbar-logo">
+        <a href="dashboard.html"> JobConnect </a>
+      </div>
+
+      <button class="menu" id="menu-toggle">&#9776;</button>
+
+    </header>
+  </div>
+ 
+
+  <div class="nav-section">
+  
+  <nav>
+    
+    <div class="nav"> 
       <ul class="navbar-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="apply.html">Jobs</a></li>
-        <li><a href="dashboard.html">Dashboard</a></li>
-        <li><a href="login.html" class="active-link">Login</a></li>
+        <li class=><a href="job-listing.html" class="nav-a">Job Listing</a></li>
+        <li class=><a href="apply.html" class="nav-a">Apply</a></li>
+        <li class=><a href="dashboard.html" class="nav-a">Dashboard</a></li>
+        <li class=><a href="login.html" class="nav-a">Login</a></li>
       </ul>
     </div>
   </nav>
+  </div>
 
   <main class="login-container">
     <h1 class="login-title">Login to JobConnect</h1>
@@ -53,6 +69,13 @@
       </ul>
     </div>
   </footer>
-
+  <script>
+    const menuBtn = document.querySelector('.menu');
+        const navSection = document.querySelector('.nav-section');
+      
+        menuBtn.addEventListener('click', () => {
+          navSection.classList.toggle('show');
+        });
+  </script>
 </body>
 </html>
