i ahve added the apply page to the description apply buttun and also added s ome space for the button in larger screen size.

--- a/public/job details-Product-Designer.html
+++ b/public/job details-Product-Designer.html
@@ -23,12 +23,12 @@
       <button class="tag">Hybrid</button>
     </div>
     <div>
-        <button class="apply-btn">Apply Now</button>
+        <a href="apply.html" class="apply-btn">Apply Now</a>
     </div>
     </div>
 
     <div class="job-description">
-      <h2>Job Description</h2>
+      <h2 class="descrition-h2">Job Description</h2>
       <p>
         As a Project Manager, you’ll oversee project planning, timelines, and delivery while ensuring communication and alignment across departments. You’ll be the key point of accountability.
       </p>
