--- a/public/job-details-software-Engineer.html
+++ b/public/job-details-software-Engineer.html
@@ -14,16 +14,21 @@
         <h2 class="jobs-header">Software Engineer</h2>
       <p class="Company-name"><strong>Company:</strong> TecCorp</p>
     <p class="Company-location"><strong>Location:</strong> Brikama</p>
+
     <div class="tags">
-      <span class="tag">Full-Time</span>
-      <span class="tag">Remote</span>
-      <span class="tag">Experienced</span>
+      <button class="tag">Full-Time</button>
+      <button class="tag">Remote</button>
+      <button class="tag">Experienced</button>
     </div>
-    <button class="apply-btn">Apply Now</button>
+
+   <div>
+     <a href="apply.html" class="apply-btn">Apply Now</a>
+  </div>
+  
   </div>
 
   <div class="job-description">
-    <h3>Job Description</h3>
+    <h2 class="descrition-h2">Job Description</h2>
     <p>We are seeking a passionate Software Engineer to join our growing development team. You’ll be responsible for building scalable web applications, writing clean code, and collaborating with cross-functional teams.</p>
 
     <h3>Requirements</h3>
