--- a/public/job-details-Data-Analyst.html
+++ b/public/job-details-Data-Analyst.html
@@ -24,12 +24,12 @@
       <button class="tag">Remote</button> 
     </div>
     <div>
-        <button class="apply-btn">Apply Now</button>
+        <a href="apply.html" class="apply-btn">Apply Now</a>
     </div>
      </div>
 
     <div class="job-description">
-      <h2>Job Description</h2>
+      <h2 class="descrition-h2">Job Description</h2>
       <p>
         As a Data Analyst, you'll work closely with cross-functional teams to collect, clean, and interpret data to support strategic decisions. You’ll turn numbers into insights that drive success.
       </p>
