--- a/public/job details-Product-Designer.html
+++ b/public/job details-Product-Designer.html
@@ -3,52 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project Manager - Job Details</title>
+  <title>Job Details</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
   <main>
     <section class="job-details-section">
-    <div class="job-header">
-      <h1 class="jobs-header">Project Manager</h1>
-      <p class="Company-name"><strong>Company:</strong>BuildRight Inc.</p>
-      <p class="Company-location"><strong>Location:</strong>Banjul</p>
-     
-    
-
-    <div class="job-tags">
-      <button class="tag">Management</button>
-      <button class="tag">Full-time</button>
-      <button class="tag">Hybrid</button>
-    </div>
-    <div>
+      <div class="job-header">
+        <h2 class="jobs-header">Loading...</h2>
+        <p class="Company-name"><strong>Company:</strong> </p>
+        <p class="Company-location"><strong>Location:</strong> </p>
+        <div class="tags"></div>
         <a href="apply.html" class="apply-btn">Apply Now</a>
-    </div>
-    </div>
+      </div>
 
-    <div class="job-description">
-      <h2 class="descrition-h2">Job Description</h2>
-      <p>
-        As a Project Manager, you’ll oversee project planning, timelines, and delivery while ensuring communication and alignment across departments. You’ll be the key point of accountability.
-      </p>
+      <div class="job-description">
+        <h3>Job Description</h3>
+        <p>Loading...</p>
 
-      <h3>Requirements</h3>
-      <ul>
-        <li>Experience leading cross-functional teams</li>
-        <li>Excellent organizational and time-management skills</li>
-        <li>Strong written and verbal communication</li>
-        <li>Knowledge of project management tools (e.g., Jira, Trello)</li>
-      </ul>
+        <h3>Requirements</h3>
+        <ul class="requirements-list"></ul>
 
-      <h3>Benefits</h3>
-      <ul>
-        <li>Health and dental coverage</li>
-        <li>Performance bonuses</li>
-        <li>Remote work flexibility</li>
-      </ul>
-    </div>
+        <h3>Perks & Benefits</h3>
+        <ul class="perks-list"></ul>
+      </div>
     </section>
   </main>
+
+  <script src="./js/jobDetails.js"></script>
 </body>
 </html>
